[package]
name = "exfat"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
macros = { version = "0.1.0", path = "macros/bin_layout" }
rand = { version = "0.8.5", default-features = false, features = ["getrandom"] }
serde = { version = "1.0.215", features = ["derive"] }
serde-big-array = "0.5.1"
uguid = { version = "2.2.0", features = ["std", "serde"] }
